# spli

./: .clang-format  .clang-tidy  CMakeLists.txt  shell.nix
src/: main.cpp  perhaps.hpp  ring.hpp
